--- a/lib/generators/geo_master_jp/templates/create_towns.rb.erb
+++ b/lib/generators/geo_master_jp/templates/create_towns.rb.erb
@@ -4,13 +4,14 @@ class CreateTowns < ActiveRecord::Migration<%= migration_version %>
       t.references :geo_master_jp_prefecture, null: false, index: true, foreign_key: true
       t.references :geo_master_jp_city,       null: false, index: true, foreign_key: true
 
-      # t.string :zip_code,                     index: true
-      t.string :code,            null: false, index: true
-      t.string :name,            null: false, index: true
-      # t.string :name_kana,                    index: true
-      # t.string :name_alphabet,                index: true
-      t.float  :latitude,                     index: true
-      t.float  :longitude,                    index: true
+      t.datetime :deleted_at,                   index: true
+      t.string   :zip_code,        null: false, index: true
+      t.string   :code,            null: false, index: true
+      t.string   :name,            null: false, index: true
+      t.string   :name_kana,       null: false, index: true
+      t.string   :name_alphabet,   null: false, index: true
+
+      t.timestamps index: true
     end
   end
 end
