--- a/lib/generators/geo_master_jp/templates/create_cities.rb.erb
+++ b/lib/generators/geo_master_jp/templates/create_cities.rb.erb
@@ -1,7 +1,7 @@
 class CreateCities < ActiveRecord::Migration<%= migration_version %>
   def change
     create_table :geo_master_jp_cities do |t|
-      t.references :geo_master_jp_prefecture, null: false, index: true, foreign_key: true
+      t.string :geo_master_jp_prefecture_code, null: false, index: true, foreign_key: true
 
       t.datetime :deleted_at,                   index: true
       t.string   :code,            null: false, index: true
@@ -11,5 +11,6 @@ class CreateCities < ActiveRecord::Migration<%= migration_version %>
 
       t.timestamps index: true
     end
+    add_foreign_key :geo_master_jp_cities, :geo_master_jp_prefectures, column: :geo_master_jp_prefecture_code, primary_key: :code
   end
 end
