--- a/lib/generators/geo_master_jp/templates/create_stations.rb.erb
+++ b/lib/generators/geo_master_jp/templates/create_stations.rb.erb
@@ -1,8 +1,8 @@
 class CreateStations < ActiveRecord::Migration<%= migration_version %>
   def change
     create_table :geo_master_jp_stations do |t|
-      t.references :geo_master_jp_line,       null: false, index: true, foreign_key: true
-      t.references :geo_master_jp_prefecture, null: false, index: true, foreign_key: true
+      t.string :geo_master_jp_line_code,       null: false, index: true, foreign_key: true
+      t.string :geo_master_jp_prefecture_code, null: false, index: true, foreign_key: true
 
       t.string  :status,          null: false, index: true
       t.string  :code,            null: false, index: true
@@ -21,5 +21,7 @@ class CreateStations < ActiveRecord::Migration<%= migration_version %>
 
       t.timestamps index: true
     end
+    add_foreign_key :geo_master_jp_stations, :geo_master_jp_lines,       column: :geo_master_jp_line_code,       primary_key: :code
+    add_foreign_key :geo_master_jp_stations, :geo_master_jp_prefectures, column: :geo_master_jp_prefecture_code, primary_key: :code
   end
 end
